# usart

./: .gitignore  Makefile  Makefile-Bruce  Makefile_4_mbedtls_programs_aes  README.md  aes.c  build.sh  burn-efuses.bat  com_uart_port.c  com_uart_port.h  create-efuse-burning-sb.bat  fat.py  lf.c  load-flashloader-usb.bat  main.c  mmakefile  modbus.c  modbus.h  modbus_main.c  modbus_rtu.c  modbus_rtu.h  modbus_tiny.h  openssl_aes_128.sh  openssl_aes_128_de.sh  program-flash-usb.bat  program-memory-image.bat  rw_fifo.sh  test.c  test.map  test_mcrypt.c  test_openssl_aes_128.sh  thread_ex.cpp
crypt_host/: aes_host.c  aes_host.h  atecc_host.c  atecc_host.h  checksum_host.c  checksum_host.h  ecc_host.c  ecc_host.h  ecdsa_host.c  ecdsa_host.h  kdf_prf_host.c  kdf_prf_host.h  rng_host.c  rng_host.h  sha256_host.c  sha256_host.h
freeRTOS/: Serial Programming HOWTO.c
jqjson/: jq_sku_16BI_led_rs485.sh  jq_sku_16uio_lcd_rs485.sh
jqjson/HW/: BOARDS_INFO.txt  DEVICE_RT1050_INFO.h  IP IO IP Unitary pin assignment Rev30 for MCU board OPTION 1.1.xlsx  JSON_config.txt  JSON_note.txt  pin_summary_4FW_snapon_io.xlsx
jqjson/json_compare/: fw_snap_on_io_dv1_T1L.json  fw_snap_on_io_dv2.json  tc_snap_on_io_dv1_T1L.json  tc_snap_on_io_dv2.json
jqjson/json_compare/sku_16uio_lcd_rs485/: .jq_sku_16uio_lcd_rs485.sh.swp  fw_sku_16uio_lcd_rs485.json  jq_sku_16uio_lcd_rs485.sh  run.sh  tag_e2prom_jq_sku_16uio_lcd_rs485.sh  tag_i2c_jq_sku_16uio_lcd_rs485.sh  tag_knob_jq_sku_16uio_lcd_rs485.sh  tag_ledchip_jq_sku_16uio_lcd_rs485.sh  tag_rstpin_jq_sku_16uio_lcd_rs485.sh  tag_spi_jq_sku_16uio_lcd_rs485.sh  tc_sku_16uio_lcd_rs485.json
led/: Makefile  blink.c  blink.h  led.c  led.h
libs/: common.py  crc_calc.py  frame_slip.py  print_log.py  serial_msg.py  vsom_bd.py
mcrypto/: aes-xts.c  aes-xts.h  cmac1.c  cmac1.h  data_authentication.c  data_authentication.h  hal_aes.h  hal_aes_imxrt.c  hal_aes_imxrt.h  hal_rng.h  hal_rng_imxrt.c  kdf.c  kdf.h  mcrypto.h  memory_encryption.c  memory_encryption.h
uart_os/: Driver_USART.h  bapi_atomic.h  bapi_board_variant.h  bapi_cmsis_driver_helper.cpp  bapi_common.cpp  bapi_common.h  bapi_config.h  bapi_io_weak.inc  bapi_irq.cpp  bapi_irq.h  bapi_mcu_clock.h  bapi_uart.h  bapi_uart_FS_SNAP_ON_IO.h  bapi_uart_MCU_VENDOR_NXP.cpp  bapi_uart_weak.inc  board_uart_cfg_FS_SNAP_ON_IO.c  board_uart_cfg_MCU_VENDOR_NXP.h  board_uart_err_irq_MCU_VENDOR_NXP.c
uart_os/baseplate/: CMakeLists.txt  bacnetHoneywell.h  baseplate.h  baseplate_mcu_vendors.h  baseplate_rtoss.h
uart_os/cmsis-driver/: CMakeLists.txt  Driver_Flash.cpp  Driver_Flash.h  Driver_I2C.cpp  Driver_I2C.h  Driver_USART.cpp  Driver_USART.h  Driver_USBD.cpp  Driver_USBD.h
uart_os/cmsis-driver/usart-filter/: CMakeLists.txt  bacnetMSTP_usart_filter.cpp  bacnetMSTP_usart_filter.h  buffering_usart_filter.cpp  buffering_usart_filter.h  console_usart_filter.cpp  console_usart_filter.h  rs485_usart_filter.cpp  rs485_usart_filter.h
uart_os/rtos/NoRTOS/: CMakeLists.txt  atomic_queue.hpp  cmsis_os_NoRTOS.cpp  cmsis_os_NoRTOS.h
uart_os/rtos/c++/: osMailQueue.hpp  osMutex.hpp  osThread.hpp  osTimer.hpp
uart_os/rtos/cmsis-rtos/: CMakeLists.txt  cmsis_os_original.h  cmsis_os_redirect.h
uart_os/rtos/cmsis-rtos-ext/: CMakeLists.txt  globalMallocTracer.h  osAdc.cpp  osAdc.h  osBi.cpp  osBi.h  osCom.cpp  osCom.h  osComBacnet.h  osExUIO.cpp  osExUIO.h  osFlash.cpp  osFlash.h
uart_os/rtos/cmsis-rtos/internal/: cmsis_osMail.inc  cmsis_osPool.inc  mail_queue.hpp  mail_queue_destructor.hpp  mem_pool.hpp  mem_pool_destructor.hpp
uart_os/utils/: CMakeLists.txt  binary_search.hpp  byteArrayChunks.hpp  custom_stl_allocator.hpp  int.hpp  isrmem.h  mallocTracer.hpp  non_freeable_heap.cpp  non_freeable_heap.hpp  object_traits.hpp  padding.hpp  ppod_test.hpp  static_sorted_array.hpp  struct_member_traits.hpp  time_stamped_series.hpp  typed_enum.h  typed_queue.hpp  uitoa_c.hpp  unsigned_list_c.hpp  usb_misc.h  utils.cpp  utils.h  variadic_macro.h
usart/: Makefile  usart.c  usart.h
